# shortmovie-draft-generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXPERIMENT_REPORT.md  README.md  alembic.ini  authenticator.yaml  docker-compose.yaml  pyproject.toml  simple_temporal_test.py  temporal_analysis.py  temporal_matching_comparison.py  test_video_splitting.py
.github/workflows/: pytest.yml
.streamlit/: config.toml
sample_scripts/: 01_video_cut.py  02_text_overlay.py  03_aspect_ratio_convert.py  04_subtitle_merge.py  README.md
src/: setting.py
src/agent_sdk/agents_registry/: youtube_scenario.py
src/agent_sdk/context/: youtube_scenario_context.py
src/agent_sdk/hooks/: streamlit_hooks.py  youtube_agent_hooks.py
src/agent_sdk/schemas/: __init__.py  base.py  responses.py  youtube.py
src/agent_sdk/tools/: chatgpt_operations.py  context_management.py  context_operations.py  display_utils.py
src/agent_sdk/utils/: __init__.py  agent_tool_utils.py  conversation_helpers.py  model_settings.py
src/clients/: __init__.py  chatgpt_client.py
src/lib/: llm_client.py  logger.py
src/lib/dao/: user.py
src/lib/dao/helper/: db_context.py  session.py
src/lib/models/: user.py
src/lib/video_splitting/: __init__.py  csv_parser.py  text_matcher.py  video_splitter.py  whisper_analyzer.py
src/lib/youtube/: transcript_extraction.py  video_processing.py  youtube_download.py
src/scripts/: split_video_from_csv.py
src/streamlit/: main.py
src/streamlit/components/: base.py  login.py
src/streamlit/functions/: data_handling.py  directory.py  extract_file.py  parser.py  state.py
src/streamlit/pages/00_共通/: 00_main.py
src/streamlit/pages/01_PoC/: 01_YouTube動画生成.py
tests/: test_basic.py
tests/test_clients/: test_chatgpt_client.py
